--- a/invoice/invoice.html
+++ b/invoice/invoice.html
@@ -2,9 +2,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Invoice</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="http://localhost:3000/invoice/style.css" />
 		<link rel="license" href="https://www.opensource.org/licenses/mit-license/" />
-		<script src="script.js"></script>
+		<script src="http://localhost:3000/invoice/script.js"></script>
 	</head>
 	<body>
 		<header>
